# PantryPro

./: .gitignore  Access.txt  CMakeLists.txt  DummyData.txt  README.md
.github/workflows/: cmake.yml
assets/: app.html  bits-n-bobs  create-account.html  home.html  individualRecipe.html  ll  log-in.html  new  planner.html  recipes.html  script.js  view-recipe.html
assets/css/: styles.css
assets/data/: planner.json
assets/partials/: recipeCard.html
assets/scripts/: planner.js  script.js
docs/: ER.drawio
mysql-connector-c++-8.1.0-winx64/: INFO_BIN
mysql-connector-c++-8.1.0-winx64/lib64/vs14/: libcrypto.lib  mysqlcppconn.lib  mysqlcppconn8.lib
mysql-connector-c++-8.1.0/lib64/: libfido2.1.8.0.dylib  libssl.3.dylib
mysql-lib/: libcrypto.3.dylib
src/: Day.cpp  DummyData.txt  Ingredients.cpp  Ingredients.h  MealPlanner.cpp  MyApp.cpp  MyApp.h  Recipe.cpp  Recipe.h  RecipeMethods.cpp  RecipeMethods.h  RecipeObject.cpp  RegisterCFunctions.cpp  RegisterCFunctions.h  UI.cpp  UI.h  UltralightInitialiser.cpp  UltralightInitialiser.h  databaseConnection.cpp  databaseConnection.h  databaseQuery.cpp  day.cpp  day.h  dbconnection.cpp  dbconnection.h  ingredient.cpp  ingredient.h  main.cpp  mealPlanner.h  recipe.cpp  recipe.h  recipeAPI.cpp  recipeAPI.h  recipeDatabase.cpp  recipeDatabase.h  recipeImage.cpp  recipeImage.h  recipeMethods.cpp  recipeMethods.h  recipeObject.cpp  (+5 more)
tests/: CMakeLists.txt  RecipeTests.cpp  plannerTests.cpp  recipeTests.cpp  reviewTests.cpp  test.cpp
